// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card displays a Card with actions 1`] = `
<div>
  <div
    class="mui-card-mock"
  >
    <div
      class="mui-cardcontent-mock"
    />
    <div
      class="mui-cardactions-mock"
    >
      actions
    </div>
  </div>
</div>
`;

exports[`Card displays a Card with content 1`] = `
<div>
  <div
    class="mui-card-mock"
  >
    <div
      class="mui-cardcontent-mock"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Card displays a Card with headers 1`] = `
<div>
  <div
    class="mui-box-mock"
  >
    <div
      class="mui-box-mock"
    >
      header
      subtitle
    </div>
    <div
      class="mui-box-mock"
    />
  </div>
</div>
`;
